# tutorial

bbkup/deepak_bkup/: CMakeLists.txt  LMS-FAQ (1).mht  PSL_Shirish_Dumbre_Dev.doc  RealPythonFreeCourse  StatefulPartitionedCall (1).docx  StatefulPartitionedCall.docx  StatefulPartitionedOp.odt  TVMSoftwaresList.txt  TestCases.xlsx  TestCases1.xlsx  Untitled Document  aegonneft (1).docx  aegonneft-1.docx  cmds.sh  deeplearningframeworks  ex2.py  ex3.py  example.py  example.py.txt  find_creation_date.sh  list.py  lprog.py  mahesh.py  marketdata_outdata.csv  mmsnext  partitionedOpEx.py  rd.py  softskillscourse  spop.py.txt  spopResearch  spop_with_res_var.py.txt  spop_working.py  startPycharm.sh  statefulpartitionedcall.txt  stpartex.py  stpartex.py.txt  tf2test.py  tftest.py  threading  threading.cpp  (+2 more)
